<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:background="@drawable/rounded_corner_background">

    <Button
        android:id="@+id/pronto"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pronto"
        android:background="@color/fundo_botao_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/data"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <Button
        android:id="@+id/data"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/fundo_botao_entrar"
        app:layout_constraintEnd_toStartOf="@+id/pronto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/criar_aventura"
        android:textColor="@color/fundo_botao_entrar"
        app:layout_constraintStart_toEndOf="@+id/fechar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fechar"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/botao_fechar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_nova_sessao"
        android:textColor="#877D91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/dark"
        android:ems="10"
        android:hint="@string/nome_sessao"
        android:inputType="textPersonName"
        android:textColor="@color/dark"
        android:textColorHint="@color/dark"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />
</android.support.constraint.ConstraintLayout>