<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/igor_login_backgrownd2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_corner_background">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:text="@string/criar_aventura"
                android:textColor="@color/fundo_botao_entrar"
                app:layout_constraintStart_toEndOf="@+id/fechar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/fechar"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/botao_fechar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/label_nome"
                android:textColor="#877D91"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <EditText
                android:id="@+id/titulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/dark"
                android:ems="10"
                android:hint="@string/nome_aventura"
                android:inputType="textPersonName"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <ImageButton
                android:id="@+id/pronto"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/botao_pronto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aventura_sinopse" />

            <EditText
                android:id="@+id/aventura_sinopse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/dark"
                android:ems="10"
                android:hint="@string/sinopse_aventura"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:typeface="sans"
                app:layout_constraintBottom_toTopOf="@+id/pronto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/sinopse_aventura"
                android:textColor="#877D91"
                app:layout_constraintBottom_toTopOf="@+id/aventura_sinopse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/botao_criar_nova_aventura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>